@@ -87,7 +87,8 @@ resource_forks_write = None
 resource_forks_conn = None
 
 # Like the above, but applies to MacOS Carbon Finder creator/type info.
-carbonfile_active = None
+# As of 1.0.2 this has defaulted to off because of bugs
+carbonfile_active = 0
 carbonfile_write = None
 carbonfile_conn = None
 
